--- a/app/views/layouts/shoppe/application.html.haml
+++ b/app/views/layouts/shoppe/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title #{@page_title} - Shoppe
+    %title #{@page_title} - Shoppe!
     = stylesheet_link_tag 'shoppe/application'
     = javascript_include_tag 'shoppe/application'
     = csrf_meta_tags
